--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,6 @@
     "angular": "1.5.8",
     "angular-material": "^1.1.1",
     "angular-cookies": "^1.5.8",
-    "ngInfiniteScroll": "1.0.0",
-    "jquery": "^3.1.1"
+    "ngInfiniteScroll": "1.0.0"
   }
 }
