--- a/bower.json
+++ b/bower.json
@@ -15,9 +15,6 @@
     "tests"
   ],
   "devDependencies": {
-    "angular": "1.5.8",
-    "angular-material": "^1.1.1",
-    "angular-cookies": "^1.5.8",
-    "ngInfiniteScroll": "1.0.0"
+    "angular-cookies": "^1.5.8"
   }
 }
