--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,9 @@
     "tests"
   ],
   "devDependencies": {
-    "angular-cookies": "^1.5.8"
+    "angular-cookies": "^1.5.8",
+    "restangular": "^1.5.2",
+    "lodash": "^4.16.6",
+    "angular-ui-router": "^0.3.1"
   }
 }
